tests/ui/var_not_found.stderr
error: cannot find `a` in this scope
   ╭─[tests/ui/var_not_found.ina:4:5]
   │
 4 │     a;
   │     ┬
   │     ╰─ not found in this scope
   ∙
───╯
